--- a/myweb/templates/main.html
+++ b/myweb/templates/main.html
@@ -1,18 +1,27 @@
+<!-- base/templates/main.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MyWeb</title>
+    <title>{% block title %}My Project{% endblock %}</title>
 </head>
 <body>
-
-    {% include 'navbar.html' %} <!-- To make sure that we have the navbar on every page  -->
-
-    {% block content %}
-
-    {% endblock%}
-
-    
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="{% url 'home' %}">Logo</a>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'home' %}">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'login' %}">Log-in</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <div class="container">
+        {% block content %}{% endblock %}
+    </div>
 </body>
 </html>
