--- a/myweb/templates/main.html
+++ b/myweb/templates/main.html
@@ -7,21 +7,17 @@
     <title>{% block title %}My Project{% endblock %}</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="{% url 'home' %}">Logo</a>
-        <div class="collapse navbar-collapse">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'home' %}">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'login' %}">Log-in</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <div class="container">
-        {% block content %}{% endblock %}
-    </div>
+    {% include 'navbar.html' %}
+        {% if messages %}
+            <div class="messages">
+                {% for message in messages %}
+                    <h1> {{message}} </h1>
+                {% endfor %}
+            </div>
+        {% endif %}
+
+    {% block content %}
+    {% endblock %}
+   
 </body>
 </html>
