--- a/myweb/templates/navbar.html
+++ b/myweb/templates/navbar.html
@@ -1,1 +1,14 @@
-<a href = "/"> <h1>LOGO</h1></a>
+<a href = "{% url 'home' %}"> <h1>LOGO</h1></a>
+<a href = "{% url 'home' %}"> <h1>HOME</h1></a>
+
+{% if request.user.is_authenticated %}
+<h3> Hello {{request.user}} </h3>
+
+<a href = "{% url 'logout' %}"><h1>LOGOUT</h1></a>
+
+{% else %}
+
+<a href = "{% url 'login' %}"> <h1>LOGIN</h1></a>
+
+{% endif%}
+<hr>
