--- a/myweb/base/templates/base/existing_page.html
+++ b/myweb/base/templates/base/existing_page.html
@@ -5,5 +5,9 @@
 
 {% block content %}
 <h1>Welcome to the Home Page</h1>
-<p>This is the home page content for logged-in users.</p>
+<p>This is the home page content.</p>
+<img src="{% static 'images/todo.png' %}" alt="Home Image">
 {% endblock %}
+
+
+
