--- a/myweb/base/templates/base/home.html
+++ b/myweb/base/templates/base/home.html
@@ -7,7 +7,11 @@
 <h1>Welcome to the Home Page</h1>
 <p>This is the home page content for logged-in users.</p>
 {% if user.is_authenticated %}
-    <a href="{% url 'profile' %}" class="profile-link">Profile</a>
-
+    <a href="{% url 'profile' %}" class="profile-link"><h1>Profile`</h1></a>
+    <a href="{% url 'add_task' %}" class="addtask-link"><h1>Add Task</h1></a>
+    <a href = "{% url 'logout' %}"><h1>LOG OUT</h1></a>
 {% endif %}
 {% endblock %}
+
+
+
