--- a/myweb/base/templates/base/profile.html
+++ b/myweb/base/templates/base/profile.html
@@ -4,6 +4,11 @@
 {% block title %}Profile - My Project{% endblock %}
 
 {% block content %}
-<h1>User Profile</h1>
-<p>This is the profile page content.</p>
+<h1>Profile Page</h1>
+<p>This is the profile page content for logged-in users.</p>
+
+
+
 {% endblock %}
+
+
