Scheduled added for no reason

--- a/myweb/base/templates/base/home.html
+++ b/myweb/base/templates/base/home.html
@@ -54,7 +54,7 @@
     <a href="{% url 'profile' %}" class="profile-link"><h1>Profile</h1></a>
 
     <!-- Task List -->
-    <h2>Projects' List</h2>
+    <h2>Projects' list</h2>
     <ul>
         {% for task in tasks %}
         <li>
