--- a/myweb/base/templates/base/login.html
+++ b/myweb/base/templates/base/login.html
@@ -1,20 +1,33 @@
 <!-- templates/login.html -->
 {% extends 'main.html' %}
 
-
-
 {% block content %}
+
+{% if page == 'login' %}
 <div>
-    <form method = "POST" action="">
+    <form method="POST" action="">
         {% csrf_token %}
         <label>Username:</label>
-        <input type="text" name="username" placeholder = "Enter User">
+        <input type="text" name="username" placeholder="Enter User">
         <label>Password:</label>
-        <input type="password" name ="password" placeholder="Enter Password">
+        <input type="password" name="password" placeholder="Enter Password">
         <input type="submit" value="Login">
-
+        <p>Haven't Signed Up?</p>
+        <a href="{% url 'register' %}">Register</a>
     </form>
-
 </div>
+{% else %}
+<div>
+    <form method="POST" action="">
+        {% csrf_token %}
+        {{ form }}
+        <input type="submit" value="Register">
+    </form>
+    
+    <p>Already Signed Up?</p>
+    <a href="{% url 'login' %}">Login</a>
+</div>
+{% endif %}
 
 {% endblock %}
+
