login/signup is fixed, users are fixed

--- a/myweb/base/templates/base/existing_page.html
+++ b/myweb/base/templates/base/existing_page.html
@@ -1,3 +1,5 @@
+
+<!-- base/templates/base/existing_page.html -->
 {% extends 'main.html' %}
 {% load static %}
 
@@ -8,6 +10,7 @@
 <p>This is the home page content.</p>
 <img src="{% static 'images/todo.png' %}" alt="Home Image">
 {% endblock %}
+
 
 
 
